Imortant changes:
- Default image size now 100 instead of 40 (can be restored with "set images_size 40")
- Links to available feeds are now displayed at the bottom of HTML pages
- "root" has been modified to go to the root of the capsule/userspace "root /" for real root
- Images are now displayed in Gemini. This can be disabled with "set gemini_images false"
Features:
- new "websearch" command which default to wiby.me
- new "share" command to send a page by email
- new "reply" command to send an email to the author of the page
- "cookies" command and http cookies are now supported in netcache (by Urja)
- "set default_cmd" now allows to configure what happen on empty lines
- "view switch" changes between readable/full view (by Andrew Fowlie)
- customize prompt with "set prompt_on" and "set prompt_off" (by Andrew Fowlie)
- "help help" now sends an email to the offpunk-users mailing-list
Others:
- In "lists", only consider files ending with .gmi (bug #46 by woffs)
- support for new links color in gopher (by JMCS)
- fix an off by one bug in "cp url XX" 
- Ansicat: Fix incorrectly identifying RSS feeds as XHTML when there was no entry
- Fix sync hanging on gopher interactive prompt (by JMCS)
- Fix crash when trying to parse HTML without BS4 (reported by Hoël Bézier)
- Automatically replace space by %20 in img url in HTML
- Ansicat: HTML Render img with data-src if src doesn’t link to a valid image
- Opnk: fix a crash when trying to cache-clean uncached url (such as images)
- added mime-type "application/pgp-keys" as to be opened by TextRenderer

## 2.8 - November 13th 2025
- New option "images_size" to use with "set" (idea by aelius)
- Automatically use newly created certificates in Gemini (by JMCS)
- Fix a rare crash when listing urls in a non-existant page
- ansicat: Trying to get render preformatted text correctly in HTML
- ansicat: html <code> should be inline, not a separate block like <pre>
- ansicat: <abbr> is rendered as <code>